--- a/14_Feb/valentine.html
+++ b/14_Feb/valentine.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
+<meta charset="UTF-8" name="viewport" content="device-width,initial=scale=1.0">
 <title>Be My Valentine 💖</title>
 <style>
 * {
@@ -228,3 +228,4 @@ yesBtn.addEventListener("click", () => {
 
 </body>
 </html>
+
