--- a/14_Feb/valentine.html
+++ b/14_Feb/valentine.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8" name="viewport" content="device-width,initial=scale=1.0">
 <title>Be My Valentine 💖</title>
 <style>
 * {
@@ -131,71 +131,6 @@ button {
     text-shadow: 0 0 10px rgba(255,77,109,0.6); /* optional glow effect */
 }
 
-/* Responsive adjustments */
-@media (max-width: 768px) {
-    .card, #celebrate {
-        width: 95%;
-        padding: 30px 20px;
-        border-radius: 20px;
-    }
-
-    h2 {
-        font-size: 24px;
-    }
-
-    #celebrate h1 {
-        font-size: 24px;
-    }
-
-    p {
-        font-size: 16px;
-    }
-
-    button {
-        padding: 12px 28px;
-        font-size: 18px;
-    }
-
-    .card img, #celebrate img {
-        width: 80%;
-        max-width: 250px;
-    }
-}
-
-@media (min-width: 769px) and (max-width: 1200px) {
-    .card, #celebrate {
-        width: 80%;
-        padding: 35px 25px;
-        border-radius: 25px;
-    }
-
-    h2 {
-        font-size: 26px;
-    }
-
-    #celebrate h1 {
-        font-size: 26px;
-    }
-
-    p {
-        font-size: 17px;
-    }
-
-    button {
-        padding: 13px 32px;
-        font-size: 19px;
-    }
-
-    .card img, #celebrate img {
-        width: 85%;
-        max-width: 300px;
-    }
-}
-
-/* Ensure NO button stays on screen */
-#no {
-    transition: all 0.2s ease;
-}
 </style>
 </head>
 <body>
@@ -231,7 +166,7 @@ for (let i = 0; i < 40; i++) {
 </div>
 
 <div id="celebrate" class="card">
-    <h1>I LOVE YOU SO MUCH 💖</h1>
+    <h1>I LOVE YOU SO MUCH 💖<h1>
     <!-- Square love picture inside the white card -->
     <img src="pic1.jpeg" alt="Love Pic">
 
